tests/errors/tc_expr_member_nonstruct.lx
@module "main"

pub const main -> fn () int {
    let x: int = 5;
    x.nonexistent;
    return 0;
}
